welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: Int does not take parameters
  avance(nbPas())
              ^Program:6: error: Int does not take parameters
  recule(nbPas())
              ^